testsuite/tests/alias/unbound_foo.ocamlc.reference
File "use_foo.ml", line 2, characters 8-13:
2 | let y = Foo.x
            ^^^^^
Error: Unbound module "Foo"
